# log4c

./: .gitignore  CMakeLists.txt  README.md
log4c/: log4c.h  main.c
log4c.Example/: main.c
